# slide-forge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  auto.json  class-diagrams.json  config.json  design-notes.json  equation-rendering.json  index.html  installation.json  intro.json  myst.search.json  myst.xref.json  objects.inv  ppt_converter.py  pyproject.toml  quickstart.json  requirements.txt  sequence-diagrams.json  sitemap.xml  test_slideforge.py  todo.json
.github/workflows/: ci.yml  docs.yml
.windsurf/rules/: README.md  document-conversion.md  license-header.md  one-class-per-file.md  python-file-naming.md  testing-guidelines.md
auto/: index.html
class-diagrams/: index.html
design-notes/: index.html
docs/: class-diagrams.md  equation-testing-strategy.md  license-header.txt  slide-forge-design.md  testing-strategy.md
docs/book/: _config.yml  _toc.yml  changelog.md  design-notes.md  myst-theme.css  myst.yml  todo.md
equation-rendering/: index.html
installation/: index.html
latex/: presentation.tex
pptx/: .gitignore
quickstart/: index.html
samples/beamer/: Makefile  README.md  sample_presentation.tex
scripts/: check_license_headers.py  convert_sample.py  setup-dev.sh
sequence-diagrams/: index.html
slide-forge/: auto.json  class-diagrams.json  config.json  design-notes.json  index.html  installation.json  intro.json  myst.search.json  quickstart.json  sequence-diagrams.json
slide-forge/auto/: index.html
slide-forge/class-diagrams/: index.html
slide-forge/design-notes/: index.html
slide-forge/installation/: index.html
slide-forge/quickstart/: index.html
slideforge/: __init__.py  core.py
tests/: __init__.py  conftest.py  test_core.py
todo/: index.html
tools/: generate_api_docs.py
(+53 files in other folders)
